Fixed alignment of time left

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
     font-size: 1.5rem;
     font-weight: bold;
     margin-bottom: 1em;
+    text-align: center;
     text-transform: uppercase;
     letter-spacing: 1px;
 }
